Eforce - Personal Dev/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Degree__c</fullName>
        <label>Additional Degree</label>
        <picklist>
            <picklistValues>
                <fullName>MBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MHA (Master in Hospital Administration)</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>127</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bumi Tendering Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmaserv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Supplier</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Indonesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Malaysia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Philippines</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Code__c</fullName>
        <description>Unique code for each Customer</description>
        <displayFormat>ETH{000000}</displayFormat>
        <label>Customer Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Matron</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Staff Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าจัดซื้อ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าพัสดุ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าห้องผ่าตัด</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รองหัวหน้าห้องผ่าตัด</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าฝ่ายการพยาบาล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าห้องคลอด</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รองหัวหน้าห้องคลอด</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าแผนกอุบัติเหตุและฉุกเฉิน</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>พยาบาลห้องผ่าตัด</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าแผนกเภสัชกรรม</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าแผนก</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin/ Secretary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR Supervisor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER Supervsior</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy staff in OR (Depo)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Central Sterile Supply Dept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse/Materials Mgnt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Admin Department/Finance/Acctng</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Date Of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_of_Visit__c</fullName>
        <label>Day of Visit</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>A&amp;E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anesthesiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiacthoracic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cardiology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorectal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CVT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digestive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neuro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neurosurgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OB/GYN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ophthalmology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ortho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orthopedic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pediatric Surgery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plastic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing/Store</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>District</label>
        <picklist>
            <picklistValues>
                <fullName>Aceh Besar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceh Jaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceh Singkil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aceh Tamiang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaminos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alor Gajah</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alor Setar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ambon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ampang</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anambas Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angeles b4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antipolo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aru Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asahan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asmat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bachok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacolod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bacoor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Badung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bago</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baguio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bais</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balanga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balangan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Balikpapan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banda Aceh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bandar Baharu</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doc_Salutation__c</fullName>
        <label>Salutation Doc</label>
        <picklist>
            <picklistValues>
                <fullName>Asso. Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cik.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datuk.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dir.(Directress/Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phar.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puan.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puan Sri.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr (Sister).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan Sri.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuan.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นาง.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นางสาว.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นาย.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นายแพทย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้ช่วยศาสตราจารย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ภก.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ภญ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รองศาสตราจารย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ศาสตราจารย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แพทย์หญิง.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Doctor_Type__c</fullName>
        <label>Doctor Type</label>
        <picklist>
            <picklistValues>
                <fullName>Head of Department</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Senior Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pengarah Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pen Pengarah Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้อำนวยการโรงพยาบาล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รองผู้อำนวยการโรงพยาบาล</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าภาควิชา</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าหน่วย</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าแผนก</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>หัวหน้าจัดซื้อ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นายแพทย์</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แพทย์หญิง</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fellow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>อื่นๆ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Surgeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chief of Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hospital Vice Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deputy Head of Department</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hospital_Type__c</fullName>
        <label>Hospital Type</label>
        <picklist>
            <picklistValues>
                <fullName>Private Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private - Dental Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dialysis Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government - District</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government - Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government - Teaching Institution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Aesthetic Center</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Surgical Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government – State Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government – MINDEF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government Hospital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgicenters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetic Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GP Clinic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maternity Hospital</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Influence_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Influence Purchase</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsGovernment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsGovernment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>J_J_Speaker_Faculty__c</fullName>
        <label>J&amp;J Speaker/ Faculty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Opinion_Leader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Key Opinion Leader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_Bed__c</fullName>
        <label>No Of Beds</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_OR__c</fullName>
        <label>No of OR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PostCode__c</fullName>
        <label>PostCode</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preferred_Day_of_Visit__c</fullName>
        <label>Preferred Day of Visit</label>
        <picklist>
            <picklistValues>
                <fullName>Sunday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Time_of_Visit__c</fullName>
        <label>Preferred Time of Visit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Asso. Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cik.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datuk.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dir.(Directress/Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mrs.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ms.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pastor.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phar.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prof.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puan.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puan Sri.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr (Sister).</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tan Sri.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuan.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นาง.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นางสาว.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นาย.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>นายแพทย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ผู้ช่วยศาสตราจารย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ภก.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ภญ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รองศาสตราจารย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ศาสตราจารย์.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>แพทย์หญิง.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Society_Membership__c</fullName>
        <description>PCS
PSGS
POGS
PATACSI
PALES
ACS
POA
PUS</description>
        <label>Society Membership</label>
        <picklist>
            <picklistValues>
                <fullName>PCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PSGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PATACSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PUS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <picklist>
            <picklistValues>
                <fullName>Abra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agusan del Norte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agusan del Sur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aklan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amnat Charoen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An Giang Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ang Thong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antique</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apayao</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aurora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac Giang Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac Kan Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac Lieu Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bac Ninh Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangka-Belitung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangkok</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Banten</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ba Ria–Vung Tau Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basilan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bataan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batanes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batangas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bengkulu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benguet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ben Tre Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Biliran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binh Dinh Province</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Binh Duong Province</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>